--- a/Notebook_TC1_FIAP_Sec6_Validacao_Estatistica.ipynb
+++ b/Notebook_TC1_FIAP_Sec6_Validacao_Estatistica.ipynb
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4ac977e1",
    "metadata": {},
    "outputs": [],
@@ -702,20 +702,6 @@
       "0    0.794776\n",
       "1    0.205224\n",
       "Name: proportion, dtype: float64\n",
-      "Concluído para expenses.\n",
-      "\n",
-      "=== Pipeline para target: log_expenses ===\n",
-      "Proporção de classes em treino:\n",
-      "smoker_encoded\n",
-      "0    0.795136\n",
-      "1    0.204864\n",
-      "Name: proportion, dtype: float64\n",
-      "Proporção de classes em teste:\n",
-      "smoker_encoded\n",
-      "0    0.794776\n",
-      "1    0.205224\n",
-      "Name: proportion, dtype: float64\n",
-      "Concluído para log_expenses.\n",
       "Concluído para log_expenses.\n"
      ]
     }
@@ -767,9 +753,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\prado\\AppData\\Local\\Temp\\ipykernel_27048\\3346909974.py:6: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
+      "C:\\Users\\prado\\AppData\\Local\\Temp\\ipykernel_36292\\3346909974.py:6: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
       "  ax1.boxplot(r2_data, labels=cv_results.keys())\n",
-      "C:\\Users\\prado\\AppData\\Local\\Temp\\ipykernel_27048\\3346909974.py:10: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
+      "C:\\Users\\prado\\AppData\\Local\\Temp\\ipykernel_36292\\3346909974.py:10: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
       "  ax2.boxplot(rmse_data, labels=cv_results.keys())\n"
      ]
     },
@@ -921,7 +907,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\prado\\AppData\\Local\\Temp\\ipykernel_27048\\3346909974.py:6: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
+      "C:\\Users\\prado\\AppData\\Local\\Temp\\ipykernel_36292\\3346909974.py:6: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
       "  ax1.boxplot(r2_data, labels=cv_results.keys())\n"
      ]
     },
@@ -936,7 +922,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\prado\\AppData\\Local\\Temp\\ipykernel_27048\\3346909974.py:10: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
+      "C:\\Users\\prado\\AppData\\Local\\Temp\\ipykernel_36292\\3346909974.py:10: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
       "  ax2.boxplot(rmse_data, labels=cv_results.keys())\n"
      ]
     },
@@ -1534,6 +1520,339 @@
     "\n",
     "print(\"Tabela comparativa das métricas dos modelos para cada target:\")\n",
     "display(comparison_df.round(4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "650255be",
+   "metadata": {},
+   "source": [
+    "## 8. Validação Estatística dos Coeficientes da Regressão Linear"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "41c3adaf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: statsmodels in c:\\users\\prado\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (0.14.4)\n",
+      "Requirement already satisfied: numpy<3,>=1.22.3 in c:\\users\\prado\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from statsmodels) (1.26.4)\n",
+      "Requirement already satisfied: scipy!=1.9.2,>=1.8 in c:\\users\\prado\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from statsmodels) (1.15.2)\n",
+      "Requirement already satisfied: pandas!=2.1.0,>=1.4 in c:\\users\\prado\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from statsmodels) (2.2.3)\n",
+      "Requirement already satisfied: patsy>=0.5.6 in c:\\users\\prado\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from statsmodels) (1.0.1)\n",
+      "Requirement already satisfied: packaging>=21.3 in c:\\users\\prado\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from statsmodels) (24.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\prado\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from pandas!=2.1.0,>=1.4->statsmodels) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\prado\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from pandas!=2.1.0,>=1.4->statsmodels) (2025.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\prado\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from pandas!=2.1.0,>=1.4->statsmodels) (2025.1)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\prado\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from python-dateutil>=2.8.2->pandas!=2.1.0,>=1.4->statsmodels) (1.17.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.0.1 -> 25.1.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install statsmodels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d2a92a9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:           log_expenses   R-squared:                       0.795\n",
+      "Model:                            OLS   Adj. R-squared:                  0.792\n",
+      "Method:                 Least Squares   F-statistic:                     291.4\n",
+      "Date:                Mon, 02 Jun 2025   Prob (F-statistic):               0.00\n",
+      "Time:                        17:17:01   Log-Likelihood:                -587.51\n",
+      "No. Observations:                1069   AIC:                             1205.\n",
+      "Df Residuals:                    1054   BIC:                             1280.\n",
+      "Df Model:                          14                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "=======================================================================================\n",
+      "                          coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "---------------------------------------------------------------------------------------\n",
+      "const                   6.9071      0.036    189.876      0.000       6.836       6.978\n",
+      "age                     0.7718      0.108      7.178      0.000       0.561       0.983\n",
+      "bmi                    -0.0114      0.045     -0.256      0.798      -0.099       0.076\n",
+      "children                0.1225      0.013      9.090      0.000       0.096       0.149\n",
+      "smoker_encoded          1.8742      0.043     43.697      0.000       1.790       1.958\n",
+      "sex_male               -0.0742      0.026     -2.842      0.005      -0.125      -0.023\n",
+      "region_northeast        0.1544      0.037      4.160      0.000       0.082       0.227\n",
+      "region_northwest        0.1024      0.038      2.723      0.007       0.029       0.176\n",
+      "region_southeast        0.0208      0.037      0.559      0.576      -0.052       0.094\n",
+      "age_bmi_interaction     0.0260      0.080      0.323      0.747      -0.132       0.184\n",
+      "age_squared            -0.2499      0.090     -2.767      0.006      -0.427      -0.073\n",
+      "bmi_normal              1.7100      0.038     44.845      0.000       1.635       1.785\n",
+      "bmi_obese               1.9159      0.044     43.448      0.000       1.829       2.002\n",
+      "bmi_overweight          1.7832      0.030     59.885      0.000       1.725       1.842\n",
+      "bmi_underweight         1.4980      0.092     16.219      0.000       1.317       1.679\n",
+      "high_risk              -0.6949      0.063    -11.096      0.000      -0.818      -0.572\n",
+      "==============================================================================\n",
+      "Omnibus:                      515.081   Durbin-Watson:                   1.900\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):             2853.517\n",
+      "Skew:                           2.215   Prob(JB):                         0.00\n",
+      "Kurtosis:                       9.667   Cond. No.                     7.29e+15\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[2] The smallest eigenvalue is 5.94e-29. This might indicate that there are\n",
+      "strong multicollinearity problems or that the design matrix is singular.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import statsmodels.api as sm\n",
+    "\n",
+    "X_train = pipeline_log['X_train']\n",
+    "y_train = pipeline_log['y_train']\n",
+    "\n",
+    "X_train_fixed = X_train.copy()\n",
+    "for col in X_train_fixed.select_dtypes(include='bool').columns:\n",
+    "    X_train_fixed[col] = X_train_fixed[col].astype(int)\n",
+    "\n",
+    "region_cols = ['region_northeast', 'region_northwest', 'region_southeast', 'region_southwest']\n",
+    "if all(col in X_train_fixed.columns for col in region_cols):\n",
+    "    X_train_fixed = X_train_fixed.drop(columns=['region_southwest'])\n",
+    "\n",
+    "# Adicione o intercepto\n",
+    "X_train_sm = sm.add_constant(X_train_fixed)\n",
+    "\n",
+    "# Ajuste o modelo OLS\n",
+    "model_sm = sm.OLS(y_train, X_train_sm).fit()\n",
+    "\n",
+    "print(model_sm.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "fa5059cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P-values dos coeficientes:\n",
+      "const                   0.000000e+00\n",
+      "age                     1.331102e-12\n",
+      "bmi                     7.976809e-01\n",
+      "children                4.794777e-19\n",
+      "smoker_encoded         7.674297e-239\n",
+      "sex_male                4.563371e-03\n",
+      "region_northeast        3.443803e-05\n",
+      "region_northwest        6.584761e-03\n",
+      "region_southeast        5.764494e-01\n",
+      "age_bmi_interaction     7.466383e-01\n",
+      "age_squared             5.749758e-03\n",
+      "bmi_normal             1.448787e-246\n",
+      "bmi_obese              3.741294e-237\n",
+      "bmi_overweight          0.000000e+00\n",
+      "bmi_underweight         5.544640e-53\n",
+      "high_risk               3.903875e-27\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "pvalues = model_sm.pvalues\n",
+    "print(\"P-values dos coeficientes:\")\n",
+    "print(pvalues)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3440fb2",
+   "metadata": {},
+   "source": [
+    "## 9. Análise de Multicolinearidade\n",
+    "\n",
+    "Cálculo do VIF (Variance Inflation Factor) para as variáveis do modelo. Um VIF alto (> 5 ou 10) indica multicolinearidade."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d596bb64",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "VIF para as variáveis do modelo (log_expenses):\n",
+      "                feature        VIF\n",
+      "0                   age  69.508000\n",
+      "1                   bmi  12.036319\n",
+      "2              children   1.111383\n",
+      "3        smoker_encoded   1.797064\n",
+      "4              sex_male   1.021031\n",
+      "5      region_northeast   1.552132\n",
+      "6      region_northwest   1.535921\n",
+      "7      region_southeast   1.634014\n",
+      "8   age_bmi_interaction  38.294192\n",
+      "9           age_squared  48.705918\n",
+      "10           bmi_normal   2.942035\n",
+      "11            bmi_obese   4.278447\n",
+      "12       bmi_overweight   2.587593\n",
+      "13      bmi_underweight   1.419861\n",
+      "14            high_risk   1.958646\n"
+     ]
+    }
+   ],
+   "source": [
+    "from statsmodels.stats.outliers_influence import variance_inflation_factor\n",
+    "\n",
+    "def calculate_vif(X):\n",
+    "    vif_data = []\n",
+    "    for i in range(X.shape[1]):\n",
+    "        vif = variance_inflation_factor(X.values, i)\n",
+    "        vif_data.append((X.columns[i], vif))\n",
+    "    return pd.DataFrame(vif_data, columns=[\"feature\", \"VIF\"])\n",
+    "\n",
+    "X_train_log = pipeline_log['X_train'].copy()\n",
+    "\n",
+    "for col in X_train_log.select_dtypes(include='bool').columns:\n",
+    "    X_train_log[col] = X_train_log[col].astype(int)\n",
+    "if all(col in X_train_log.columns for col in region_cols):\n",
+    "    X_train_log = X_train_log.drop(columns=['region_southwest'])\n",
+    "\n",
+    "X_train_log_sm = sm.add_constant(X_train_log)\n",
+    "print(\"\\nVIF para as variáveis do modelo (log_expenses):\")\n",
+    "vif_log = calculate_vif(X_train_log_sm.drop(columns=['const']))\n",
+    "print(vif_log)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "bcc73f1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VIF após remoção das variáveis:\n",
+      "          feature       VIF\n",
+      "0        children  1.000189\n",
+      "1  smoker_encoded  1.121677\n",
+      "2     age_squared  1.003872\n",
+      "3       bmi_obese  1.122702\n",
+      "\n",
+      "Resumo do novo modelo OLS (sem variáveis derivadas):\n",
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:           log_expenses   R-squared:                       0.750\n",
+      "Model:                            OLS   Adj. R-squared:                  0.749\n",
+      "Method:                 Least Squares   F-statistic:                     797.5\n",
+      "Date:                Mon, 02 Jun 2025   Prob (F-statistic):          2.66e-318\n",
+      "Time:                        17:17:01   Log-Likelihood:                -693.00\n",
+      "No. Observations:                1069   AIC:                             1396.\n",
+      "Df Residuals:                    1064   BIC:                             1421.\n",
+      "Df Model:                           4                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==================================================================================\n",
+      "                     coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "----------------------------------------------------------------------------------\n",
+      "const              8.7159      0.022    396.340      0.000       8.673       8.759\n",
+      "children           0.1518      0.014     10.803      0.000       0.124       0.179\n",
+      "smoker_encoded     1.5460      0.035     43.970      0.000       1.477       1.615\n",
+      "age_squared        0.4802      0.014     33.667      0.000       0.452       0.508\n",
+      "bmi_obese          0.1325      0.029      4.644      0.000       0.076       0.188\n",
+      "==============================================================================\n",
+      "Omnibus:                      268.743   Durbin-Watson:                   1.858\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              756.490\n",
+      "Skew:                           1.271   Prob(JB):                    5.37e-165\n",
+      "Kurtosis:                       6.244   Cond. No.                         3.07\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "cols_to_remove = ['age', 'bmi', 'sex_male', 'region_northeast', 'region_northwest', 'region_southeast', 'age_bmi_interaction', 'bmi_normal', 'bmi_overweight', 'bmi_underweight', 'high_risk']\n",
+    "X_train_reduced = X_train_fixed.drop(columns=cols_to_remove)\n",
+    "\n",
+    "vif_reduced = calculate_vif(X_train_reduced)\n",
+    "print(\"VIF após remoção das variáveis:\")\n",
+    "print(vif_reduced)\n",
+    "\n",
+    "import statsmodels.api as sm\n",
+    "X_train_reduced_sm = sm.add_constant(X_train_reduced)\n",
+    "model_sm_reduced = sm.OLS(y_train, X_train_reduced_sm).fit()\n",
+    "\n",
+    "print(\"\\nResumo do novo modelo OLS (sem variáveis derivadas):\")\n",
+    "print(model_sm_reduced.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "cbe552fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Comparação das métricas no conjunto de treino:\n",
+      "Modelo original:     R² = 0.7947 | RMSE = 0.42\n",
+      "Modelo reduzido:     R² = 0.7499 | RMSE = 0.46\n",
+      "P-values dos coeficientes:\n",
+      "const              0.000000e+00\n",
+      "children           6.924257e-26\n",
+      "smoker_encoded    1.550753e-241\n",
+      "age_squared       9.132915e-170\n",
+      "bmi_obese          3.841224e-06\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "import numpy as np\n",
+    "\n",
+    "y_pred_train_original = model_sm.predict(X_train_sm)\n",
+    "y_pred_train_reduced = model_sm_reduced.predict(X_train_reduced_sm)\n",
+    "\n",
+    "rmse_original = np.sqrt(mean_squared_error(y_train, y_pred_train_original))\n",
+    "r2_original = r2_score(y_train, y_pred_train_original)\n",
+    "\n",
+    "rmse_reduced = np.sqrt(mean_squared_error(y_train, y_pred_train_reduced))\n",
+    "r2_reduced = r2_score(y_train, y_pred_train_reduced)\n",
+    "\n",
+    "print(\"Comparação das métricas no conjunto de treino:\")\n",
+    "print(f\"Modelo original:     R² = {r2_original:.4f} | RMSE = {rmse_original:.2f}\")\n",
+    "print(f\"Modelo reduzido:     R² = {r2_reduced:.4f} | RMSE = {rmse_reduced:.2f}\")\n",
+    "\n",
+    "pvalues = model_sm_reduced.pvalues\n",
+    "print(\"P-values dos coeficientes:\")\n",
+    "print(pvalues)"
    ]
   }
  ],
