--- a/Notebook_TC1_FIAP_Sec5_Treinamento_Avaliacao.ipynb
+++ b/Notebook_TC1_FIAP_Sec5_Treinamento_Avaliacao.ipynb
@@ -5,7 +5,7 @@
    "id": "fa48f80c",
    "metadata": {},
    "source": [
-    "# Tech Challenge FIAP - Etapa 6: Validação Estatística"
+    "# Tech Challenge FIAP - Etapa 5: Treinamento e Avaliação"
    ]
   },
   {
