--- a/Notebook_TC1_FIAP_Sec3_Preprocessamento.ipynb
+++ b/Notebook_TC1_FIAP_Sec3_Preprocessamento.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "70a17152",
    "metadata": {},
    "outputs": [
@@ -18,8 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting kagglehub\n",
-      "  Downloading kagglehub-0.3.12-py3-none-any.whl.metadata (38 kB)\n",
+      "Requirement already satisfied: kagglehub in c:\\users\\prado\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (0.3.12)\n",
       "Requirement already satisfied: packaging in c:\\users\\prado\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from kagglehub) (24.2)\n",
       "Requirement already satisfied: pyyaml in c:\\users\\prado\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from kagglehub) (6.0.2)\n",
       "Requirement already satisfied: requests in c:\\users\\prado\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from kagglehub) (2.32.3)\n",
@@ -29,9 +28,6 @@
       "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\prado\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from requests->kagglehub) (2.3.0)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\prado\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from requests->kagglehub) (2025.1.31)\n",
       "Requirement already satisfied: colorama in c:\\users\\prado\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from tqdm->kagglehub) (0.4.6)\n",
-      "Downloading kagglehub-0.3.12-py3-none-any.whl (67 kB)\n",
-      "Installing collected packages: kagglehub\n",
-      "Successfully installed kagglehub-0.3.12\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
@@ -51,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "95a386bc",
    "metadata": {},
    "outputs": [
@@ -159,7 +155,7 @@
        "4   32    male  28.9         0     no  northwest   3866.86"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "fbeca550",
    "metadata": {},
    "outputs": [
@@ -237,14 +233,12 @@
    "id": "f4e4d96f",
    "metadata": {},
    "source": [
-    "## 2. Transformação da Variável Target (expenses)\n",
-    "\n",
-    "Aplicando transformação logarítmica para normalizar a distribuição assimétrica da variável expenses."
+    "## 2. Transformação da Variável Target (expenses)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "e9ae6913",
    "metadata": {},
    "outputs": [
@@ -252,7 +246,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\prado\\AppData\\Local\\Temp\\ipykernel_424\\380055480.py:11: SettingWithCopyWarning: \n",
+      "C:\\Users\\prado\\AppData\\Local\\Temp\\ipykernel_8296\\380055480.py:11: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -332,12 +326,6 @@
    "metadata": {},
    "source": [
     "## 3. Encoding de Variáveis Categóricas\n",
-    "\n",
-    "**Por que o encoding é necessário?**\n",
-    "- Modelos de machine learning trabalham com dados numéricos\n",
-    "- Variáveis categóricas precisam ser convertidas para formato numérico\n",
-    "- Diferentes tipos de encoding preservam diferentes tipos de informação\n",
-    "\n",
     "**Estratégias de Encoding:**\n",
     "- **Label Encoding** para `smoker` (binária: yes/no)\n",
     "- **One-Hot Encoding** para `sex` e `region` (nominais sem ordem)"
@@ -345,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "83821b2b",
    "metadata": {},
    "outputs": [
@@ -480,7 +468,7 @@
        "4              True             False             False  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,9 +506,6 @@
    "metadata": {},
    "source": [
     "## 4. Feature Engineering\n",
-    "\n",
-    "Com base nas correlações observadas na EDA (age: 0.299, bmi: 0.199), vamos criar novas features que podem capturar melhor a relação com os custos.\n",
-    "\n",
     "**Lógica das novas features:**\n",
     "- **age_bmi_interaction**: Interação entre idade e BMI (pessoas mais velhas com BMI alto podem ter custos exponencialmente maiores)\n",
     "- **age_squared**: Relação quadrática da idade (custos podem crescer exponencialmente com a idade)\n",
@@ -530,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "cce0b7b5",
    "metadata": {},
    "outputs": [
@@ -600,110 +585,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79920a36",
-   "metadata": {},
-   "source": [
-    "## 5. Escalonamento de Features Numéricas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "40dd43bc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Features numéricas a serem escalonadas:\n",
-      "['age', 'bmi', 'children', 'age_bmi_interaction', 'age_squared']\n",
-      "\n",
-      "Estatísticas antes do escalonamento:\n",
-      "               age          bmi     children  age_bmi_interaction  age_squared\n",
-      "count  1337.000000  1337.000000  1337.000000          1337.000000  1337.000000\n",
-      "mean     39.222139    30.665520     1.095737          1212.134854  1735.471952\n",
-      "std      14.044333     6.100664     1.205571           522.587083  1125.562335\n",
-      "min      18.000000    16.000000     0.000000           288.000000   324.000000\n",
-      "25%      27.000000    26.300000     0.000000           767.000000   729.000000\n",
-      "50%      39.000000    30.400000     1.000000          1154.400000  1521.000000\n",
-      "75%      51.000000    34.700000     2.000000          1588.800000  2601.000000\n",
-      "max      64.000000    53.100000     5.000000          2847.800000  4096.000000\n",
-      "\n",
-      "Estatísticas após escalonamento (StandardScaler):\n",
-      "                age           bmi      children  age_bmi_interaction  \\\n",
-      "count  1.337000e+03  1.337000e+03  1.337000e+03         1.337000e+03   \n",
-      "mean  -6.643070e-17 -6.058480e-16  3.852980e-17         7.440238e-17   \n",
-      "std    1.000374e+00  1.000374e+00  1.000374e+00         1.000374e+00   \n",
-      "min   -1.511647e+00 -2.404821e+00 -9.092342e-01        -1.769046e+00   \n",
-      "25%   -8.705798e-01 -7.158489e-01 -9.092342e-01        -8.521095e-01   \n",
-      "50%   -1.582291e-02 -4.353939e-02 -7.944162e-02        -1.105203e-01   \n",
-      "75%    8.389340e-01  6.615657e-01  7.503509e-01         7.210398e-01   \n",
-      "max    1.764921e+00  3.678759e+00  3.239729e+00         3.131109e+00   \n",
-      "\n",
-      "        age_squared  \n",
-      "count  1.337000e+03  \n",
-      "mean  -1.036319e-16  \n",
-      "std    1.000374e+00  \n",
-      "min   -1.254484e+00  \n",
-      "25%   -8.945294e-01  \n",
-      "50%   -1.906178e-01  \n",
-      "75%    7.692616e-01  \n",
-      "max    2.097984e+00  \n",
-      "\n",
-      "Verificação - Médias próximas de 0 e desvios padrão próximos de 1:\n",
-      "Médias: age                   -0.0\n",
-      "bmi                   -0.0\n",
-      "children               0.0\n",
-      "age_bmi_interaction    0.0\n",
-      "age_squared           -0.0\n",
-      "dtype: float64\n",
-      "Desvios padrão: age                    1.000374\n",
-      "bmi                    1.000374\n",
-      "children               1.000374\n",
-      "age_bmi_interaction    1.000374\n",
-      "age_squared            1.000374\n",
-      "dtype: float64\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 5. ESCALONAMENTO DE FEATURES NUMÉRICAS\n",
-    "\n",
-    "numerical_features = ['age', 'bmi', 'children', 'age_bmi_interaction', 'age_squared']\n",
-    "\n",
-    "print(\"Features numéricas a serem escalonadas:\")\n",
-    "print(numerical_features)\n",
-    "\n",
-    "df_final = df_featured.copy()\n",
-    "\n",
-    "scaler = StandardScaler()\n",
-    "df_final[numerical_features] = scaler.fit_transform(df_final[numerical_features])\n",
-    "\n",
-    "print(\"\\nEstatísticas antes do escalonamento:\")\n",
-    "print(df_featured[numerical_features].describe())\n",
-    "\n",
-    "print(\"\\nEstatísticas após escalonamento (StandardScaler):\")\n",
-    "print(df_final[numerical_features].describe())\n",
-    "\n",
-    "print(\"\\nVerificação - Médias próximas de 0 e desvios padrão próximos de 1:\")\n",
-    "print(\"Médias:\", df_final[numerical_features].mean().round(10))\n",
-    "print(\"Desvios padrão:\", df_final[numerical_features].std().round(10))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "d6771493",
    "metadata": {},
    "source": [
-    "## 6. Preparação do Dataset Final\n",
+    "## 5. Preparação do Dataset Final\n",
     "\n",
     "Criando o dataset final preparado para modelagem com apenas as features processadas."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "cd3cb4a4",
    "metadata": {},
    "outputs": [
@@ -746,8 +638,6 @@
       "✓ Todas as features estão numericamente encodadas\n",
       "\n",
       "Dataset limpo criado:\n",
-      "Shape antes da limpeza: (1337, 22)\n",
-      "Shape após limpeza: (1337, 18)\n",
       "Colunas removidas: 4\n",
       "\n",
       "Dados processados salvos em: C:\\Users\\prado\\.cache\\kagglehub\\datasets\\awaiskaggler\\insurance-csv\\versions\\1/insurance_preprocessed.csv\n"
@@ -792,8 +682,6 @@
     "df_final_clean = df_final.drop(columns=['sex', 'smoker', 'region', 'bmi_category'])\n",
     "\n",
     "print(f\"\\nDataset limpo criado:\")\n",
-    "print(f\"Shape antes da limpeza: {df_final.shape}\")\n",
-    "print(f\"Shape após limpeza: {df_final_clean.shape}\")\n",
     "print(f\"Colunas removidas: {df_final.shape[1] - df_final_clean.shape[1]}\")\n",
     "\n",
     "df_final_clean.to_csv(f\"{base_dados}/insurance_preprocessed.csv\", index=False)\n",
@@ -806,6 +694,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
