--- a/Notebook_TC1_FIAP_Sec6_Validacao_Estatistica.ipynb
+++ b/Notebook_TC1_FIAP_Sec6_Validacao_Estatistica.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "2d164ab3",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "33a0d442",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "7aaf16c3",
    "metadata": {},
    "outputs": [
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "4ac977e1",
    "metadata": {},
    "outputs": [],
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "553e30b8",
    "metadata": {},
    "outputs": [
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "fe2e6e4a",
    "metadata": {},
    "outputs": [
@@ -904,14 +904,6 @@
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\prado\\AppData\\Local\\Temp\\ipykernel_36292\\3346909974.py:6: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
-      "  ax1.boxplot(r2_data, labels=cv_results.keys())\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -922,6 +914,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "C:\\Users\\prado\\AppData\\Local\\Temp\\ipykernel_36292\\3346909974.py:6: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
+      "  ax1.boxplot(r2_data, labels=cv_results.keys())\n",
       "C:\\Users\\prado\\AppData\\Local\\Temp\\ipykernel_36292\\3346909974.py:10: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
       "  ax2.boxplot(rmse_data, labels=cv_results.keys())\n"
      ]
@@ -1111,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "0fa89302",
    "metadata": {},
    "outputs": [
@@ -1249,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "f20ad506",
    "metadata": {},
    "outputs": [
@@ -1383,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "id": "80ddb0f6",
    "metadata": {},
    "outputs": [
@@ -1532,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "id": "41c3adaf",
    "metadata": {},
    "outputs": [
@@ -1569,7 +1563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "id": "d2a92a9f",
    "metadata": {},
    "outputs": [
@@ -1583,7 +1577,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.792\n",
       "Method:                 Least Squares   F-statistic:                     291.4\n",
       "Date:                Mon, 02 Jun 2025   Prob (F-statistic):               0.00\n",
-      "Time:                        17:17:01   Log-Likelihood:                -587.51\n",
+      "Time:                        20:03:01   Log-Likelihood:                -587.51\n",
       "No. Observations:                1069   AIC:                             1205.\n",
       "Df Residuals:                    1054   BIC:                             1280.\n",
       "Df Model:                          14                                         \n",
@@ -1646,7 +1640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "id": "fa5059cf",
    "metadata": {},
    "outputs": [
@@ -1693,7 +1687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "id": "d596bb64",
    "metadata": {},
    "outputs": [
@@ -1747,7 +1741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "id": "bcc73f1c",
    "metadata": {},
    "outputs": [
@@ -1769,7 +1763,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.749\n",
       "Method:                 Least Squares   F-statistic:                     797.5\n",
       "Date:                Mon, 02 Jun 2025   Prob (F-statistic):          2.66e-318\n",
-      "Time:                        17:17:01   Log-Likelihood:                -693.00\n",
+      "Time:                        20:03:02   Log-Likelihood:                -693.00\n",
       "No. Observations:                1069   AIC:                             1396.\n",
       "Df Residuals:                    1064   BIC:                             1421.\n",
       "Df Model:                           4                                         \n",
@@ -1812,7 +1806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "id": "cbe552fe",
    "metadata": {},
    "outputs": [
