--- a/Notebook_TC1_FIAP_Sec5_Treinamento_Avaliacao.ipynb
+++ b/Notebook_TC1_FIAP_Sec5_Treinamento_Avaliacao.ipynb
@@ -5,12 +5,12 @@
    "id": "fa48f80c",
    "metadata": {},
    "source": [
-    "# Tech Challenge FIAP - Etapa 6: Validação Estatística"
+    "# Tech Challenge FIAP - Etapa 5: Treinamento e Validação"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "2d164ab3",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "33a0d442",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "7aaf16c3",
    "metadata": {},
    "outputs": [
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "4ac977e1",
    "metadata": {},
    "outputs": [],
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "553e30b8",
    "metadata": {},
    "outputs": [
@@ -702,20 +702,6 @@
       "0    0.794776\n",
       "1    0.205224\n",
       "Name: proportion, dtype: float64\n",
-      "Concluído para expenses.\n",
-      "\n",
-      "=== Pipeline para target: log_expenses ===\n",
-      "Proporção de classes em treino:\n",
-      "smoker_encoded\n",
-      "0    0.795136\n",
-      "1    0.204864\n",
-      "Name: proportion, dtype: float64\n",
-      "Proporção de classes em teste:\n",
-      "smoker_encoded\n",
-      "0    0.794776\n",
-      "1    0.205224\n",
-      "Name: proportion, dtype: float64\n",
-      "Concluído para log_expenses.\n",
       "Concluído para log_expenses.\n"
      ]
     }
@@ -752,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "fe2e6e4a",
    "metadata": {},
    "outputs": [
@@ -767,9 +753,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\prado\\AppData\\Local\\Temp\\ipykernel_27048\\3346909974.py:6: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
+      "C:\\Users\\prado\\AppData\\Local\\Temp\\ipykernel_36292\\3346909974.py:6: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
       "  ax1.boxplot(r2_data, labels=cv_results.keys())\n",
-      "C:\\Users\\prado\\AppData\\Local\\Temp\\ipykernel_27048\\3346909974.py:10: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
+      "C:\\Users\\prado\\AppData\\Local\\Temp\\ipykernel_36292\\3346909974.py:10: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
       "  ax2.boxplot(rmse_data, labels=cv_results.keys())\n"
      ]
     },
@@ -918,14 +904,6 @@
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\prado\\AppData\\Local\\Temp\\ipykernel_27048\\3346909974.py:6: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
-      "  ax1.boxplot(r2_data, labels=cv_results.keys())\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -936,7 +914,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\prado\\AppData\\Local\\Temp\\ipykernel_27048\\3346909974.py:10: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
+      "C:\\Users\\prado\\AppData\\Local\\Temp\\ipykernel_36292\\3346909974.py:6: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
+      "  ax1.boxplot(r2_data, labels=cv_results.keys())\n",
+      "C:\\Users\\prado\\AppData\\Local\\Temp\\ipykernel_36292\\3346909974.py:10: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
       "  ax2.boxplot(rmse_data, labels=cv_results.keys())\n"
      ]
     },
@@ -1125,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "0fa89302",
    "metadata": {},
    "outputs": [
@@ -1263,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "f20ad506",
    "metadata": {},
    "outputs": [
@@ -1397,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "id": "80ddb0f6",
    "metadata": {},
    "outputs": [
